# bifrost

./: Cargo.toml  README.md
crates/bifrost-api/src/: config.rs
crates/bifrost-frontend/: input.css
crates/bifrost-frontend/assets/: tailwind.css
crates/bifrost-frontend/src/: grommet_icons.rs  lib.rs  state.rs
crates/bifrost-frontend/src/component/: backends.rs  group.rs  groups.rs  light_details.rs  lights.rs  mod.rs  resources.rs  service.rs
crates/bifrost-frontend/src/page/: mod.rs  sidebar.rs
crates/ddp/src/: api.rs
crates/hue/src/api/: ext.rs  grouped_light.rs  light.rs  mod.rs  scene.rs
crates/wled/: Cargo.toml
crates/wled/src/: api.rs  lib.rs  serde_util.rs  types.rs
crates/z2m/src/: api.rs
doc/: DEVELOPMENT.md
src/: config.rs  error.rs  main.rs  resource.rs
src/backend/: mod.rs
src/backend/wled/: backend_event.rs  entertainment.rs  error.rs  mod.rs  websocket.rs  wled_import.rs
src/backend/z2m/: backend_event.rs  bridge_event.rs  entertainment.rs  learn.rs  mod.rs
src/model/: state.rs
src/routes/bifrost/: backend.rs  websocket.rs
src/routes/clip/: entertainment_configuration.rs
